--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Germán García",
   "license": "ISC",
   "devDependencies": {
+    "@4tw/cypress-drag-drop": "^1.8.0",
     "cypress": "^8.1.0",
     "cypress-file-upload": "^5.0.8",
     "cypress-plugin-tab": "^1.0.5",
