Instalación de Cocumber y plugins

--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "devDependencies": {
     "@4tw/cypress-drag-drop": "^1.8.0",
     "cypress": "^8.1.0",
+    "cypress-cucumber-preprocessor": "^4.2.0",
     "cypress-file-upload": "^5.0.8",
     "cypress-plugin-tab": "^1.0.5",
     "cypress-xpath": "^1.6.2"
+  },
+  "cypress-cucumber-preprocessor": {
+    "nonGlobalStepDefinitions": true
   }
 }
